--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "argon2": "^0.44.0",
     "better-sqlite3": "^12.5.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-handlebars": "^8.0.4",
     "express-session": "^1.18.2",
     "hbs": "^4.2.0",
     "marked": "^17.0.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
     "pdf-parse": "^2.4.5",
     "pdf-to-img": "^5.0.0",
